--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -9,6 +9,8 @@ jobs:
     - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
     - name: Setup Anbox Cloud
       uses: ./
+      with:
+        channel: 1.24/edge
     - name: Restore cached images
       uses: actions/cache/restore@v4
       with:
